--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # Byte-compiled / optimized / DLL files
+tmp/
+mnt/
+!mnt/materials/date_time/
+
 __pycache__/
 *.py[cod]
 *$py.class
@@ -159,4 +163,4 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
